--- a/index.html
+++ b/index.html
@@ -143,12 +143,13 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Marcellus:wght@400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Marcellus:wght@400&display=swap" 
+      rel="stylesheet" media="print" onload="this.media='all'">
 
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" media="print" onload="this.media='all'">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" media="print" onload="this.media='all'">
     <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
 
@@ -156,7 +157,7 @@
     <link href="assets/css/main.css" rel="stylesheet">
 
     <!-- Vendor JS Files (if needed, inside body or head) -->
-    <script src="assets/vendor/aos/aos.js" defer></script>
+    <!-- <script src="assets/vendor/aos/aos.js" defer></script> -->
 
   </head>
 
@@ -1051,8 +1052,9 @@
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="assets/vendor/php-email-form/validate.js" defer></script> -->
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js" defer></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/aos/aos.js" defer></script>
 
     <!-- Main JS File -->
     <script src="assets/js/main.js"></script>
