--- a/Packages-wildlife_14d.html
+++ b/Packages-wildlife_14d.html
@@ -394,7 +394,7 @@
                     120/1/D Wateraka, padukka, srilanka.
                   </a>
                 </p>
-                <p><strong>Phone:</strong><span><a href="tel:+94743773190">+94 74 377 3190</a></span></p>
+                <p><strong>Phone:</strong><span><a href="tel:+94702992057">+94 70 299 20 57</a></span></p>
                 <p><strong>Email:</strong> <span><a href="mailto:info@travelsgolanka.com">info@travelsgolanka.com</a></span></p>
               </div>
             </div>
